# awob

./: .gitignore  Cargo.toml  FUTURES.md  Justfile  README.md  release.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.husky/: pre-commit  pre-push
contrib/aur/: PKGBUILD-bin  PKGBUILD-git  PKGBUILD-listener-backlight-bin  PKGBUILD-listener-battery-bin  PKGBUILD-listener-keyboard-backlight-bin  PKGBUILD-listener-pipewire-bin  PKGBUILD-listener-power-profile-bin  PKGBUILD-listener-wob-bin  PKGBUILD-listeners-all-bin  README.md
contrib/systemd/: awob.service
crates/awob-cli/: Cargo.toml
crates/awob-cli/src/: main.rs
crates/awob-client/: Cargo.toml
crates/awob-client-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/awob-client-ffi/include/: awob_client.h
crates/awob-client-ffi/src/: lib.rs
crates/awob-client/src/: lib.rs  listener.rs
crates/awob-core/: Cargo.toml
crates/awob-core/examples/: icon_probe.rs  kdl_check.rs
crates/awob-core/src/: animation.rs  bindings.rs  colour.rs  expr.rs  icon.rs  length.rs  lib.rs  paths.rs  render.rs  scene.rs  shadow.rs  text.rs  theme.rs
crates/awob-daemon/: Cargo.toml
crates/awob-daemon/src/: config.rs  ipc.rs  known_listeners.rs  main.rs  state.rs  supervisor.rs  theme_loader.rs  watcher.rs  wayland.rs
crates/awob-listener-backlight/: Cargo.toml
crates/awob-listener-backlight/src/: main.rs  wayland_outputs.rs
crates/awob-listener-battery/: Cargo.toml
crates/awob-listener-battery/src/: main.rs
crates/awob-listener-keyboard-backlight/: Cargo.toml
crates/awob-listener-keyboard-backlight/src/: main.rs
crates/awob-listener-pipewire/: Cargo.toml
crates/awob-listener-pipewire/src/: main.rs
crates/awob-listener-power-profile/: Cargo.toml
crates/awob-listener-power-profile/src/: main.rs
crates/awob-listener-upower/: Cargo.toml
crates/awob-listener-upower/src/: main.rs
crates/awob-listener-wob/: Cargo.toml
crates/awob-listener-wob/src/: main.rs
crates/awob-protocol/: Cargo.toml
crates/awob-protocol/src/: lib.rs
demo/: README.md  all.sh  animations.sh  console.sh  cross-source.sh  icons.sh  lib.sh  preempt.sh  styles.sh  themes.sh  wedge.sh
docs/: PROTOCOL.md  THEMES.md  USAGE.md  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.js  sidebars.ts
docs/docs/: intro.md  listeners.md  protocol.md  themes.md  usage.md
docs/docs/getting-started/: gnome.md  hyprland.md  install.md  migrating-from-wob.md  quickstart.md  sway.md
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css  index.tsx
scripts/git-hooks/: pre-commit
themes/_palettes/: console.kdl  light.kdl  random.kdl  tinct.kdl
themes/console/: manifest.toml  scene.kdl
themes/default/: manifest.toml  scene.kdl
themes/light/: manifest.toml  scene.kdl
themes/minimal/: scene.kdl
themes/pulse-demo/: scene.kdl
themes/wob/: scene.kdl
