[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/jmylchreest/awob"
authors = ["John Mylchreest <jmylchreest@gmail.com>"]
rust-version = "1.85"

[workspace.dependencies]
# Internal
awob-protocol = { path = "crates/awob-protocol" }
awob-client = { path = "crates/awob-client" }
awob-core = { path = "crates/awob-core" }

# Structured logging. The daemon + every listener pulls these in;
# default level is INFO so end users see useful events without
# tweaking RUST_LOG, but per-send detail goes to DEBUG.
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter"] }

# Git hook manager. Wired in as a dev-dep on awob-daemon — its build
# script copies hooks from `.husky/` into `.git/hooks/` whenever the
# tests are built / run, so contributors get the pre-commit + pre-push
# hooks automatically on `cargo test` (or `just install-hooks`).
husky-rs = "0.3"

[profile.release]
# Size-optimised. The daemon renders 60fps OSDs which is well within
# tiny-skia's perf even at opt-level=z, so we trade speed for binary size
# uniformly across the workspace. lto=fat + codegen-units=1 unlocks
# cross-crate inlining and dead-code elimination, biggest single win.
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
