[package]
name = "awob-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "awob CLI client."

[[bin]]
name = "awob"
path = "src/main.rs"

[dependencies]
awob-client.workspace = true
clap = { version = "4", features = ["derive"] }
