[package]
name = "awob-client-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "C ABI for the awob client SDK."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
awob-client.workspace = true

[build-dependencies]
cbindgen = "0.27"
