[package]
name = "awob-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Rust SDK for talking to the awob daemon."

[dependencies]
awob-protocol.workspace = true
serde_json = "1"
thiserror = "2"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
