[package]
name = "awob-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "awob long-running daemon: Wayland surface + IPC server."

[[bin]]
name = "awob-daemon"
path = "src/main.rs"

[dependencies]
awob-protocol.workspace = true
awob-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
# Format-preserving TOML edits for `awob set-theme --persist`.
toml_edit = "0.22"
thiserror = "2"
# Daemon CLI is rarely invoked by hand — trim clap features to drop the
# fancy help/usage/colour/error-context formatting that adds ~80 KB.
clap = { version = "4", default-features = false, features = ["derive", "std"] }
notify = "6"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
calloop = "0.13"
calloop-wayland-source = "0.3"
rustix = { version = "0.38", features = ["fs", "mm"] }
memmap2 = "0.9"
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
