[package]
name = "awob-listener-keyboard-backlight"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Keyboard-backlight listener: watches /sys/class/leds and renders OSD on changes."

[[bin]]
name = "awob-listener-keyboard-backlight"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
awob-client.workspace = true
clap = { version = "4", default-features = false, features = ["derive", "std"] }
# `notify` covers the userspace-write hot path (brightnessctl etc).
notify = "6"
# `udev` covers drivers that emit KOBJ_CHANGE on LED state updates
# (some laptop EC drivers do, others don't).
udev = "0.9"
nix = { version = "0.29", features = ["poll"] }
