[package]
name = "awob-listener-pipewire"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PipeWire listener: tracks default sink/source and renders OSD on volume/mute changes."

[[bin]]
name = "awob-listener-pipewire"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
awob-client.workspace = true
clap = { version = "4", default-features = false, features = ["derive", "std"] }
pipewire = "0.9"
libspa = "0.9"
# Parsing PipeWire metadata values for `--default-only` mode.
# `default.audio.sink` etc. are JSON-encoded — extracting the `name`
# field is a one-line `serde_json::from_str` rather than a hand-rolled
# scan. Already in the workspace's transitive graph via awob-protocol.
serde_json = "1"
