[package]
name = "awob-listener-power-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Power-profile listener: watches /sys/firmware/acpi/platform_profile for performance / balanced / low-power switches."

[[bin]]
name = "awob-listener-power-profile"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
awob-client.workspace = true
clap = { version = "4", default-features = false, features = ["derive", "std"] }
notify = "6"
