[package]
name = "awob-listener-wob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "wob compatibility shim: exposes a wob-format FIFO and translates writes to awob IPC."

[[bin]]
name = "awob-listener-wob"
path = "src/main.rs"

[dependencies]
awob-client.workspace = true
clap = { version = "4", default-features = false, features = ["derive", "std"] }
nix = { version = "0.29", features = ["fs"] }
