[package]
name = "awob-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Wire protocol types for the awob daemon."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
